Fixed word-wrap for contest names in tables and changed pagination "show" to "Show".
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/applications/direct/trunk@188800 fb370eea-3af6-4597-97f7-f7400a59c12a

--- a/src/web/css/dashboard.css
+++ b/src/web/css/dashboard.css
@@ -4244,10 +4244,12 @@ hr.plain {
 	margin: auto;
 }
 .longWordsBreak{
-   width:90px;
    display:inline-block;
+   /*
+   width:90px;
    word-wrap:break-word;
    overflow:hidden;
+   */
 }
 #swUploadButtonDiv,#uploadButtonDiv{
 	padding-left:10px;
